<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.nature.pmock</groupId>
	<artifactId>PowerMock</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>PowerMock</name>
	<url>http://maven.apache.org</url>
	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
	</repositories>
	<properties>
		<powermock.version>1.5.1</powermock.version>
	</properties>
	<!--from powermock-examples -->
	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>

			<groupId>junit</groupId>

			<artifactId>junit</artifactId>

			<version>4.9</version>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>org.powermock</groupId>

			<artifactId>powermock-core</artifactId>

			<version>${powermock.version}</version>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>org.easymock</groupId>

			<artifactId>easymock</artifactId>

			<version>3.0</version>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>org.powermock</groupId>

			<artifactId>powermock-module-junit4</artifactId>

			<version>${powermock.version}</version>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>org.powermock</groupId>

			<artifactId>powermock-api-easymock</artifactId>

			<version>${powermock.version}</version>

		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<!-- Compiler -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>ISO-8859-1</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.13</version>
				<configuration>
					<argLine>-Xms2048m -Xmx2048m -XX:PermSize=2048m
						-XX:MaxPermSize=2048m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.14</version>
			</plugin>
		</plugins>
	</reporting>
</project>
